k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: astro-blog-web
  namespace: astro-blog
  labels:
    app: astro-blog
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
  - host: www.iwaningman.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: astro-blog-web
            port:
              number: 80
